Bug 860013 - navigation by words broken with orca, r=tbsaunde